Added transportation and savings selections to customer controller

--- a/FortuneTellerMVC/Views/Customers/Details.cshtml
+++ b/FortuneTellerMVC/Views/Customers/Details.cshtml
@@ -59,11 +59,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Saving.SavingsID)
+            @Html.DisplayNameFor(model => model.Saving.SavingsAmount)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Saving.SavingsID)
+            @Html.DisplayFor(model => model.Saving.SavingsAmount)
         </dd>
 
         <dt>
