--- a/FortuneTellerMVC/Views/Customers/Index.cshtml
+++ b/FortuneTellerMVC/Views/Customers/Index.cshtml
@@ -1,63 +1,62 @@
-﻿@model IEnumerable<FortuneTellerMVC.Models.Customer>
-
+﻿﻿@model IEnumerable<FortuneTellerMVC.Models.Customer>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Welcome";
 }
-
-<h2>Index</h2>
-
+<h2>Welcome</h2>
+<p>Welcome...You seek clarity about your future.</p>
+<p>Answer my questions and you shall know all...</p>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Tell me about yourself...", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Age)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BirthMonth)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FavColor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumOfSiblings)
-        </th>
-         <th></th>
-    </tr>
+@*<table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Age)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BirthMonth)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FavColor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NumOfSiblings)
+            </th>
+             <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Age)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BirthMonth)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FavColor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumOfSiblings)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CustomerID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CustomerID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CustomerID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Age)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BirthMonth)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FavColor)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumOfSiblings)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id=item.CustomerID }) |
+                @Html.ActionLink("Details", "Details", new { id=item.CustomerID }) |
+                @Html.ActionLink("Delete", "Delete", new { id=item.CustomerID })
+            </td>
+        </tr>
+    }
 
-</table>
+    </table>*@
